deployment.yml
---
  apiVersion: v1
  kind: Service
  metadata:
      name: sparklemiddleware-service
  spec:
      type: ClusterIP
      selector:
          app: sparklemiddleware
      ports:
          - protocol: "TCP"
            port: 8080
            targetPort: 3000
  
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: sparklemiddleware
spec:
    selector:
      matchLabels:
        app: sparklemiddleware
    replicas: 1
    template:
      metadata:
        labels:
          app: sparklemiddleware
      spec:
        containers:
        - name: sparklemiddleware
          image: us.icr.io/sparkle-pipeline-development/sparklemiddleware:latest
          ports:
            - containerPort: 3000
        nodeSelector:
          node: 10.241.30.89
