sparkleingressresource.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
 name: sparkleingressresource
spec:
 tls:
 - hosts:
   - sparkleuatcluster-0de26d204cce5ce3782ab0318a20cdb8-0000.us-south.containers.appdomain.cloud 
   secretName: sparkleuatcluster-0de26d204cce5ce3782ab0318a20cdb8-0000
 rules:
 - host: sparkleuatcluster-0de26d204cce5ce3782ab0318a20cdb8-0000.us-south.containers.appdomain.cloud 
   http:
     paths:
     - path: /
       backend:
         serviceName: sparklemiddleware-service
         servicePort: 8080
